# lowreslanglibapireader

./: .env.example  .gitignore  README.md  pyproject.toml
src/ddplrll_reader/: __init__.py  cli.py  client.py  config.py  downloader.py  models.py
