[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddplrll-dataset-reader"
version = "0.1.0"
description = "Python client for the Nation Newspaper Dataset API – queries Croissant JSON-LD metadata and downloads referenced PDF files."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
ddplrll-reader = "ddplrll_reader.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
